KFileWidget: drop broken workaround for old s-m-i octet-stream file suffix

Logic was establishing m_extension to be '.' when
"application/octet-stream" is the set filter and currentExtension being
empty, thus screwing over the edited filename.

s-m-i 1.10 and Qt 5.11.0 got the octet-stream file suffix fixed,
and with KCoreAddons 5.117.0 now also requiring at least s-m-i 1.10,
the work-around can be dropped.

BUG: 501085